# boltzmann

./: .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  README.rst  boltzmann.cpp  layer.cpp  neuron.cpp  neuron.hpp  node.hpp
.devcontainer/: Dockerfile  devcontainer.json
include/boltzmann/: boltzmann_config.hpp.in  layer.hpp  network.hpp  neuron.hpp  node.hpp
src/: CMakeLists.txt  layer.cpp  network.cpp  neuron.cpp  node.cpp
tests/: CMakeLists.txt  test_activate_layer.cpp  test_activate_layer_back.cpp  test_activate_node.cpp  test_boost_graph.cpp  test_create_network.cpp  test_create_neuron.cpp  test_create_node.cpp  test_opencv_display_state.cpp
